<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--application name-->
    <string name="app_name">Sambalnesia Resep Sambal</string>

    <!--about information-->
    <string name="app_version">Version 1.0.0</string>
    <string name="app_email">iqbalhood@gmail.com</string>
    <string name="app_copyright">Copyright &#169; 2016 Iqbalhood Developer \n All rights reserved</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>

    <!--google cloud messaging (gmc) push notification-->
    <string name="google_api_sender_id">10314040843300</string>

    <!--admob banner and interstitial id-->
    <string name="admob_banner_id">ca-app-pub-2341943193053317/1514883584</string>
    <string name="admob_interstitial_id">ca-app-pub-2341943193053317/7274248783</string>

    <!--display admob setting-->
    <!--@string/admob_on to enable admob-->
    <!--@string/admob_off to disable admob-->
    <string name="admob_visibility">@string/admob_on</string>

    <!--value enable and disable admob-->
    <string name="admob_on">0</string>
    <string name="admob_off">2</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=iqbalhood</string>

    <!--navigation drawer menu name-->
    <string name="drawer_new_recipes">New Recipes</string>
    <string name="drawer_category">Category</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>

    <!--preferences settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_notifications">Push Notification</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_rate">Rate</string>
    <string name="pref_header_more">More</string>
    <string name="pref_header_notifications_summary">Notification and Sound</string>
    <string name="pref_header_about_summary">Information about application</string>
    <string name="pref_header_rate_summary">Give your rate and feedback</string>
    <string name="pref_header_more_summary">More apps from developer</string>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_title_new_message_notifications">New Notifications Message</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!--network-->
    <string name="failed_connect_network">No Internet Connection!!</string>
    <string name="loading">Loading&#8230;</string>

    <!--others-->
    <string name="search_query_text">Search&#8230;</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="menu_share">Share</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_fav">Add to Favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

</resources>